finaly fixed vertical align of numbers in pieces, minor optimization to piece-code

--- a/1024/1024/www/css/index.css
+++ b/1024/1024/www/css/index.css
@@ -67,15 +67,20 @@ body {
 }
 
 .piece {
-    display: block;
-    vertical-align: middle;
+    /*display: block;*/
+    /*vertical-align: middle;*/
     text-align: center;
     background-color: #FF5300;
     width: 100%;
     height: 100%;
-    line-height: 20vmin;
+    padding-top: 3px;
+    /*line-height: 20vmin;*/
     border-radius: 1.5vmin;
     font-size: 10vmin;
+}
+
+.piece b{
+    vertical-align:middle;
 }
 
 .newPieceAnim {
